# cmake_demo

./: CMakeLists.txt
src/: CMakeLists.txt  library1.cpp  library1.h  main.cpp
src/dynamic_module/: CMakeLists.txt  sy.cpp  sy.h
src/module1/: CMakeLists.txt  module1.cpp  module1.h
